# hybrid_boxmap

./: .gitignore  3D_VISUALIZATION_GUIDE.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
demo/: __init__.py  run_bipedal.py  run_bipedal_figure.py  run_bouncing_ball.py  run_chua_circuit.py  run_rimless_wheel.py  run_rimless_wheel_enclosure.py  run_rimless_wheel_with_delay.py  run_thermostat.py  run_unstableperiodic.py  run_unstableperiodic_multi.py  test_3d_visualization.py  test_rimless_wheel_jump_penalty.py
figures/boundary_bridged_enclosure/run_tau_150_subdiv_41_41_bloat_10_001/: comparison_summary.txt
figures/rimless_wheel_jump_penalty/changed_penalty_time_to_0_1/: run_summary.txt
figures/rimless_wheel_jump_penalty/run_tau_1000_subdiv_21_21_bloat_15_001/: run_summary.txt
figures/rimless_wheel_jump_penalty/run_tau_110_subdiv_51_51_bloat_12_001/: run_summary.txt
figures/rimless_wheel_jump_penalty/run_tau_3000_subdiv_51_51_bloat_12_001/: run_summary.txt
figures/rimless_wheel_jump_penalty/run_tau_300_subdiv_51_51_bloat_12_001/: run_summary.txt
figures/rimless_wheel_jump_penalty/run_tau_400_subdiv_101_101_bloat_15_001/: run_summary.txt
figures/rimless_wheel_jump_penalty/run_tau_400_subdiv_101_101_bloat_15_005/: run_summary.txt
figures/rimless_wheel_jump_penalty/run_tau_500_subdiv_31_31_bloat_12_001/: run_summary.txt
figures/rimless_wheel_jump_penalty_enclosure/run_tau_200_subdiv_101_101_bloat_12_001/: run_summary.txt
figures/rimless_wheel_jump_penalty_enclosure/run_tau_200_subdiv_101_101_bloat_12_002/: run_summary.txt
figures/rimless_wheel_jump_penalty_enclosure/run_tau_200_subdiv_51_51_bloat_12_001/: run_summary.txt
figures/rimless_wheel_jump_penalty_enclosure/run_tau_200_subdiv_51_51_bloat_12_002/: run_summary.txt
figures/rimless_wheel_jump_penalty_enclosure/run_tau_200_subdiv_51_51_bloat_12_003/: run_summary.txt
figures/rimless_wheel_jump_penalty_enclosure/run_tau_200_subdiv_51_51_bloat_12_004/: run_summary.txt
figures/rimless_wheel_jump_penalty_enclosure/run_tau_200_subdiv_51_51_bloat_12_005/: run_summary.txt
figures/rimless_wheel_jump_penalty_enclosure/run_tau_200_subdiv_51_51_bloat_12_006/: run_summary.txt
figures/thermostat/run_tau_050_subdiv_100_2_006/: multigrid_debug.txt
figures/thermostat/run_tau_050_subdiv_100_2_007/: multigrid_debug.txt
hybrid_dynamics/: __init__.py
hybrid_dynamics/examples/: __init__.py  baker_map.py  bipedal.py  bouncing_ball.py  chua_circuit.py  rimless_wheel.py  thermostat.py  unstableperiodic.py
hybrid_dynamics/src/: __init__.py  box.py  config.py  cubifier.py  data_utils.py  demo_utils.py  evaluation.py  grid.py  grid_utils.py  hybrid_boxmap.py  hybrid_system.py  hybrid_time.py  hybrid_trajectory.py  morse_graph.py  multigrid.py  parallel_utils.py  plot_utils.py  print_utils.py  roa_utils.py  timing_utils.py  trajectory_utils.py
test/: analyze_reset_boundary.py  debug_single_box_enclosure.py  test_adaptive_jump_penalty.py  test_boundary_bridged_enclosure.py  test_improved_bridging_simple.py  test_rimless_wheel_jump_penalty.py  test_rimless_wheel_jump_penalty_enclosure.py  test_smaller_grid_comparison.py  visualize_improved_bridging.py
tests/: interval.md  morse_sets_corrected_explanation.md  morse_sets_explanation.md  test_bouncing_ball.py  test_boundary_trapping.py  test_boundary_trapping_simple.py  test_boxmap.py  test_boxmap_visualization.py  test_evaluation.py  test_graph_analysis.py  test_modified_behavior.py  test_morse_sets_analysis.py  test_no_domain_bounds.py  test_recurrent_sets.py  test_reset_map_analysis.py  test_right_boundary_self_loops.py  test_unstableperiodic.py  test_unstableperiodic_detailed.py  test_unstableperiodic_dynamics.py  unstableperiodic_analysis_summary.md
